# CrewAI_RedTeam

./: README.md  RedTeam_N8N.json  pyproject.toml
src/redteam/: __init__.py  api.py  crew.py  main.py  output.txt
src/redteam/config/: agents.yaml  tasks.yaml
src/redteam/tools/: custom_tool.py
